# phe_microservices

./: README.md
administration/: CMakeLists.txt  call.sh  register.r
administration/include/: register_replica.hpp
administration/lib/: register_replica.cpp
administration/msicheck_ip_in_network/: libmsicheck_ip_in_network.cpp
administration/msiget_unixfilesystem_free_space/: libmsiget_unixfilesystem_free_space.cpp
administration/msiregister_iterator/: libmsiregister_iterator.cpp
administration/msiregister_replica/: libmsiregister_replica.cpp
administration/msiset_resource_by_ip/: libmsiset_resource_by_ip.cpp
migration/: README.md  async_replicate_and_trim.r  audit.py  audit_run_handle_on_filesystem.py  register.py  restore.py  stat_eventhandler.py  test.py
